--- a/static/css/features/lightbox.css
+++ b/static/css/features/lightbox.css
@@ -36,19 +36,17 @@
     position: fixed;
     z-index: 1000;
     bottom: 0;
-    width: 100%;
     background: var(--overlay-bg-color);
+    left: 50%;
+    transform: translateX(-50%);
     padding: 1rem;
-    height: 15vh;
+    width: fit-content;
+    min-width: 300px;
 }
 .lightbox_overlay *:not(a):not(time) {
     color: var(--overlay-text-color);
 }
 .lightbox_overlay p {
-    max-height: 3em;
-    white-space: nowrap;     
-    overflow: hidden;
-    text-overflow: ellipsis;    
 }
 .lightbox img {
     position: absolute;
