--- a/themes/exhale/layouts/comics/single.hat.html
+++ b/themes/exhale/layouts/comics/single.hat.html
@@ -1,1 +1,6 @@
+<p class="breadcrumbs">
+    <a href="../../">Collections</a>
+    > <a href="../">{{ .Section }}</a>
+    > this 
+</p>
 {{ partial "block/title" . }}
