--- a/themes/exhale/layouts/partials/submenu.html
+++ b/themes/exhale/layouts/partials/submenu.html
@@ -3,7 +3,7 @@
         {{ if .Raw }}
         <li>{{ .Raw | safeHTML }}</li>
         {{ else }}
-        <li><a href="{{ .URL }}"  {{ if .rel }}rel="{{ .rel }}"{{ end }}>{{ .Name }}</a></li>
+        <li><a href="{{ .URL | absURL }}"  {{ if .rel }}rel="{{ .rel }}"{{ end }}>{{ .Name }}</a></li>
         {{ end }}
     {{ end }}
 </ul>
