--- a/themes/exhale/layouts/quotes/summary.boot.html
+++ b/themes/exhale/layouts/quotes/summary.boot.html
@@ -1,4 +1,4 @@
-<p><a href="{{ .RelPermalink }}" title="permalink">#</a>
+<p class="boot"><a href="{{ .RelPermalink }}" title="permalink">#</a>
 
     {{ .Render "quote_tags" }}
 </p>
