--- a/themes/exhale/layouts/quotes/single.boot.html
+++ b/themes/exhale/layouts/quotes/single.boot.html
@@ -1,4 +1,4 @@
-<p>
+<p class="boot">
     <a href="/{{ .Section }}">/{{ .Section }}</a>
     <a href="{{ .RelPermalink }}" title="permalink">#</a>
 
