--- a/themes/exhale/layouts/comics/summary.hat.html
+++ b/themes/exhale/layouts/comics/summary.hat.html
@@ -1,6 +1,6 @@
 <div class="title">
     {{ if .Title }}
-        <a class="u-url post-title" href="{{ .Permalink }}"><h3 class="p-name">{{ .Title }}</h3></a>
+        <a class="u-url post-title" href="{{ .RelPermalink }}"><h3 class="p-name">{{ .Title }}</h3></a>
     {{ end }}
 </div>
     
